--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <div id="site"></div>
+    <div id="page"></div>
     <script src="dist/main.js"></script>
 </body>
 </html>
